<?xml version="1.0"?>
<package>
  <name>adi_imu_tr_driver_ros1</name>
  <version>1.0.0</version>
  <description>The adi_imu_tr_driver_ros1 package</description>
  <maintainer email="takahashi@techno-road.com">TechnoRoad</maintainer>

  <license>BSD</license>

  <author email="takahashi@techno-road.com">Sho Takahashi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rviz_imu_plugin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_plot</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>

  </export>

</package>
